init: setup clean architecture structure